2005-10-26  Brian Cameron <Brian.Cameron@sun.com>

	* Release 2.13.0.0:  Bumping minor version
	  to match GNOME release schedule.
	* NEWS, configure.ac, autogen.sh: Updated.
	  Renamed configure.in to configure.ac.  

2005-10-14  Brian Cameron <Brian.Cameron@sun.com>

	* gui/gdmlogin.c: No longer set tooltips for menu 
	  items in gdmlogin.  These are distracting, and 
	  do not work with accessibility.  After talking 
	  with Owen Taylor at the GNOME Boston Summit, he
	  said no GNOME programs do this, and it is not
	  recommended.  Fix for bug #144869.
	* gui/gdmchooser.c:  Now use gdm_common_setup_cursor
	  instead of its own copy of the same function.
	* gui/gdmcommon.[ch]: gdmlogin, gdmgreeter and gdmchooser
	  were all using their own functions to set the background
	  color.  Now they use a common function in gdmcommon.
	* gui/gdmlogin.c, gui/gdmchooser.c, gui/greeter/greeter.c:
	  Now sets background color and sets cursor to 
	  a watch as soon as GTK is initialized and the
	  configure file read.  This shortens the amount of time
	  the background is Xserver default gray.

2005-10-06  Brian Cameron <Brian.Cameron@sun.com>

	* docs/C/gdm.xml: Add some information about
	  using GlobalFaceDir when home directories
	  are mounted via NFS/NIS, etc.

2005-10-06  Brian Cameron <Brian.Cameron@sun.com>

	* gui/gdmlogin.c, gui/greeter/greeter.c,
	  gui/greeter/greeter_item_pam.c:  Change
	  the way the "OK" and "Cancel" buttons work
	  so that they are consistant.  Now the
	  "Cancel" button in gdmlogin is active 
	  when the Username is requested and
	  pressing it just clears the field.  This
	  makes gdmlogin work like gdmgreeter.  This
	  is easier than changing gdmgreeter 
	  because the greeter themes don't support
	  changing buttons sensitivity.  Also it
	  is somewhat useful for Cancel to work
	  this way.  Now make the buttons
	  insensitive when ok/enter/tab is pressed
	  and make them sensitive again when the
	  greeter wants entry.  This fixes bug