@@ -4,6 +4,8 @@
 	  to match GNOME release schedule.
 	* NEWS, configure.ac, autogen.sh: Updated.
 	  Renamed configure.in to configure.ac.  
+	* docs/C/gdm.xml: Updated to include more
+	  workaround info for accessibility.
 
 2005-10-14  Brian Cameron <Brian.Cameron@sun.com>
 
